RPC: Add time elapsed checkbox
If checked, this adds a stopwatch for the duration of the RPC
session. This gets automatically reset if it is changed.

Resolves #6

Signed-off-by: kingbri <bdashore3@gmail.com>

--- a/src/html/pagetwo.html
+++ b/src/html/pagetwo.html
@@ -20,6 +20,9 @@
     <label for="smallImageText">Small image hover text:</label>
     <input type="text" id="smallImageText" name="Small image text" />
     <br />
+    <label for="elapsedCheck">Display time elapsed?</label>
+    <input type="checkbox" id="elapsedCheck" />
+    <br />
     <input type="submit" />
     <input type="reset" />
     <div id="reply"></div>
