Add buttons and fix type declarations
This update adds buttons to the application. The buttons have to have
BOTH the label and URL in order to show up on the RPC. An error
popup will be implemented in the next version of the app.

Resolves #3

Signed-off-by: kingbri <bdashore3@gmail.com>

--- a/src/html/pagetwo.html
+++ b/src/html/pagetwo.html
@@ -23,6 +23,22 @@
     <label for="elapsedCheck">Display time elapsed?</label>
     <input type="checkbox" id="elapsedCheck" />
     <br />
+    <div id="buttons">
+        <span>Button 1</span>
+        <br />
+        <label for="button1Label">Name:</label>
+        <input type="text" id="button1Label" />
+        <label for="button1Url">URL:</label>
+        <input type="text" id="button1Url" />
+        <br />
+        <span>Button 2</span>
+        <br />
+        <label for="button2Label">Name:</label>
+        <input type="text" id="button2Label" />
+        <label for="button2Url">URL:</label>
+        <input type="text" id="button2Url" />
+    </div>
+    <br />
     <input type="submit" />
     <input type="reset" />
     <div id="reply"></div>
