--- a/src/html/pagetwo.html
+++ b/src/html/pagetwo.html
@@ -42,6 +42,8 @@
     <input type="submit" />
     <input type="reset" />
     <div id="reply"></div>
+    <br />
+    <div id="error"></div>
 </form>
 <script>
     require('../scripts/rpcRender.js');
