Fast foward for save/load configs
I'm going to work on the CSS before I implement this, so save my work

Signed-off-by: kingbri <bdashore3@gmail.com>

--- a/src/html/pagetwo.html
+++ b/src/html/pagetwo.html
@@ -39,8 +39,9 @@
         <input type="text" id="button2Url" />
     </div>
     <br />
-    <input type="submit" />
-    <input type="reset" />
+    <button id="submit">Submit</button>
+    <button id="reset">Reset</button>
+    <button id="save">Save Config</button>
     <div id="reply"></div>
     <br />
     <div id="error"></div>
